product-inventory-api/deployment-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-inventory-api-canary
  namespace: final-assigment
spec:
  replicas: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: product-inventory-api
      canary: "true"
  template:
    metadata:
      labels:
        app: product-inventory-api
        canary: "true"
    spec:
      containers:
      - name: product-inventory-api
        image: ghcr.io/anpt1992/product-inventory-api:v1.1.1
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 80Mi
            cpu: "0.25"
          limits:
            memory: 400Mi
            cpu: "1"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        startupProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 12
