product-inventory-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-inventory-api
  namespace: final-assigment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-inventory-api
  template:
    metadata:
      labels:
        app: product-inventory-api
    spec:
      containers:
      - name: product-inventory-api
        image: ghcr.io/anpt1992/product-inventory-api:v1.0.2
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 80Mi
            cpu: "0.25"
          limits:
            memory: 400Mi
            cpu: "1"
