product-inventory-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-inventory-api
  namespace: final-assigment
spec:
  type: ClusterIP
  selector:
    app: product-inventory-api
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
