product-inventory-api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: product-inventory-api
  namespace: final-assigment
spec:
  parentRefs:
    - name: eg-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "api-assigment.anpt1992.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: product-inventory-api
          port: 8080
          weight: 80
        - name: product-inventory-api-canary
          port: 8080
          weight: 20
