product-inventory-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-inventory-api
  namespace: final-assigment  
spec:
  ingressClassName: nginx
  rules:
    - host: product-inventory.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: product-inventory-api
                port:
                  number: 8080
